# jupyterhub-airlock

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: build.yml
example/: README.md  jupyterhub_config.py
jupyterhub_airlock/: airlock.py  download.py  egress.py  filesystemio.py  main.py  user_egress.py
jupyterhub_airlock/static/: airlock.css
jupyterhub_airlock/templates/: _info.html  egress.html  error.html  index.html  new.html  page.html
tests/: conftest.py  test_egressstore.py  test_useregress.py
tests/resources/egress-123/: metadata.json
tests/resources/group-1/user-1/egress-123/: metadata.json
tests/resources/group-1/user-2/abc/: metadata.json
tests/resources/group-1/user-2/abc/files/: birds 🐧🐔🦆.txt
tests/resources/user-1/egress-123/: metadata.json
tests/resources/user-2/abc/: metadata.json
